Performed some Java 1.7 linting and other cleanups.
Note that I'm not going to go linting stuff I haven't touched in the revamp
yet, since chances are most of that will just go away (besides Info,
Graticule, and others I'm pretty sure will still be there).